--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,12 @@
         "squizlabs/php_codesniffer": "^3.4",
         "brighte/brighte-ms-standards": "^1.2"
     },
+    "autoload": {
+        "psr-4": {
+            "BrighteCapital\\EncryptedJson\\": "src/",
+            "BrighteCapital\\Tests\\EncryptedJson\\": "tests/"
+        }
+    },
     "license": "MIT",
     "authors": [
         {
@@ -15,7 +21,9 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {},
+    "require": {
+        "michaeldegroot/doctrine-encrypt-bundle": "^4.0"
+    },
     "scripts": {
         "cs": "phpcs",
         "cbf": "phpcbf",
